examples/test/testpolicy9386.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9386
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key20: value5
      key30: value2
      key37: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value21
          key6: value28
          key38: value32
      podSelector:
        matchLabels:
          key27: value18
